--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
             </div>
         </section>
 
-        <section class="container-2">
+        <section class="container">
             <div class="players1">
                 <div class="player1">
                     <div class="player1-article">
@@ -228,11 +228,6 @@
             <a href="https://github.com/alimul-reaz/" target="_blank"><i class="fa-brands fa-github"></i></a>
         </div>
     </footer>
-
-
-
-
-
 
 
 </body>
