--- a/index.html
+++ b/index.html
@@ -11,12 +11,21 @@
 </head>
 
 <body>
-    <header>
-        <nav></nav>
-    </header>
+
+    <!-- <nav>
+        <ul class="nav-list">
+            <li class="nav-items">Home</li>
+            <li class="nav-items">Clubs</li>
+            <li class="nav-items">World Cup 2023</li>
+            <li class="nav-items">Upcoming Matches</li>
+            <li class="nav-items">Contact</li>
+            <li class="nav-item"> <button>→] Login</button></li>
+        </ul>
+    </nav> -->
 
 
     <main>
+
         <section class="container">
             <div class="players">
 
@@ -228,6 +237,30 @@
             <a href="https://github.com/alimul-reaz/" target="_blank"><i class="fa-brands fa-github"></i></a>
         </div>
     </footer>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 </body>
